welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:16: error: not found: value i
    	setCouleurBrosse(T(i))
                           ^